# bonanzaDisplay

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md  pico_sdk_import.cmake
config/: lv_conf.h  pin_config.h
src/: main.c
src/display/: parallel_8080.pio  ssd1322.c  ssd1322.h  ssd1322_regs.h
src/fonts/: font_pixel_12.c  font_pixel_16.c  font_pixel_8.c  fonts.h
src/lvgl_port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
src/ui/: ui.h  ui_dashboard.c
tools/: flash.sh
